--- a/style.css
+++ b/style.css
@@ -311,17 +311,19 @@ input[type=number] {
     border-bottom: 2px solid #0082fc;
     background: #d8ecfc;
     font: 20px/1.6 "Baskerville", "Times";
-    width: 10%;
+    width: 60%;
     text-align: right;
 }
 
 select {
     border: 0;
-    width: 20%;
+    width: 60%;
     color: inherit;
     font: inherit;
     background: #d8ecfc;
     border-bottom: 2px solid #0082fc;
+    padding: 1px 2px;
+    text-align: right;
 }
 
 .tool-input {
